--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <nav class="top-nav grid-main">
         <a href="#">
           <img
-            src="/assets/shared/logo.svg"
+            src="assets/shared/logo.svg"
             width="40"
             height="40"
             alt="Typemaster Home"
@@ -35,15 +35,15 @@
         <picture class="hero-img">
           <source
             media="(width >= 75em)"
-            srcset="/assets/desktop/image-keyboard.jpg"
+            srcset="assets/desktop/image-keyboard.jpg"
           />
           <source
             media="(width >= 43.75em)"
-            srcset="/assets/tablet/image-keyboard.jpg"
+            srcset="assets/tablet/image-keyboard.jpg"
           />
 
           <img
-            src="/assets/mobile/image-keyboard.jpg"
+            src="assets/mobile/image-keyboard.jpg"
             width="1080"
             height="960"
             alt="mechanical keyboard"
@@ -58,15 +58,15 @@
         <picture class="details-img">
           <source
             media="(width >= 75em)"
-            srcset="/assets/desktop/image-phone-and-keyboard.jpg"
+            srcset="assets/desktop/image-phone-and-keyboard.jpg"
           />
           <source
             media="(width >= 43.75em)"
-            srcset="/assets/tablet/image-phone-and-keyboard.jpg"
+            srcset="assets/tablet/image-phone-and-keyboard.jpg"
           />
 
           <img
-            src="/assets/mobile/image-phone-and-keyboard.jpg"
+            src="assets/mobile/image-phone-and-keyboard.jpg"
             width="744"
             height="662"
             alt="mechanical keyboard"
@@ -75,15 +75,15 @@
         <picture class="details-img">
           <source
             media="(width >= 75em)"
-            srcset="/assets/desktop/image-glass-and-keyboard.jpg"
+            srcset="assets/desktop/image-glass-and-keyboard.jpg"
           />
           <source
             media="(width >= 43.75em)"
-            srcset="/assets/tablet/image-glass-and-keyboard.jpg"
+            srcset="assets/tablet/image-glass-and-keyboard.jpg"
           />
 
           <img
-            src="/assets/mobile/image-glass-and-keyboard.jpg"
+            src="assets/mobile/image-glass-and-keyboard.jpg"
             width="440"
             height="386"
             alt="mechanical keyboard"
@@ -103,7 +103,7 @@
         <div class="feature">
           <div class="icon">
             <img
-              src="/assets/shared/icon-compatible.svg"
+              src="assets/shared/icon-compatible.svg"
               alt=""
               width="32"
               height="32"
@@ -119,7 +119,7 @@
         <div class="feature">
           <div class="icon">
             <img
-              src="/assets/shared/icon-bluetooth.svg"
+              src="assets/shared/icon-bluetooth.svg"
               alt=""
               width="32"
               height="32"
@@ -135,7 +135,7 @@
         <div class="feature">
           <div class="icon">
             <img
-              src="/assets/shared/icon-battery.svg"
+              src="assets/shared/icon-battery.svg"
               alt=""
               width="32"
               height="32"
@@ -151,7 +151,7 @@
         <div class="feature">
           <div class="icon">
             <img
-              src="/assets/shared/icon-light.svg"
+              src="assets/shared/icon-light.svg"
               alt=""
               width="32"
               height="32"
